--- a/website code/furnture.html
+++ b/website code/furnture.html
@@ -136,7 +136,7 @@
 			<div><button type="button" onclick="showContactDetail()" id= "scan_code" class="scan_code" >Scan QR code</button></div>
 		
 			<div id="contact-detail">
-				<img src="img/tutQRcode1.png" width=20% height=50%>
+				<img src="img/tutQRcode1.jpg" width=20% height=50%>
 			<div><button type="button" onclick="closeContactDetail()" style="text-align: center" id="close_detail">close</button></div></div>
 			
 			<section class="social__media">
