--- a/website code/tutors.html
+++ b/website code/tutors.html
@@ -196,7 +196,7 @@
         </div>
     
         <div id="QRcode1" style="position: fixed; text-align: center; width: 100%; height: 100%; top: 50px; display: none;">
-            <img class="QRcode_img" src="img/tutQRcode1.png"  width=20% height=50%>
+            <img class="QRcode_img" src="img/tutQRcode1.jpg"  width=20% height=50%>
             <div><button type="button" onclick="closeQRcode(1), changeStopFlag()" style="text-align: center" class="close_btn">关闭</button></div>
         </div>
     </div>
